chore: update configuration for absolute imports and tailwind
